# acs_word_count_2_0

./: CMakeLists.txt  config.txt  config_3threads.txt  config_read.cpp  config_read.h  config_simple.txt  file_to_vecs.cpp  file_to_vecs.h  functions.cpp  functions.h  main.cpp  manager.cpp  manager.h  output_1.txt  output_2.txt  queue.h  res_a.txt  res_n.txt  run.sh
